Add optional login cookie rembering

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,9 @@ spring.servlet.multipart.max-request-size=10MB
 # Default admin password (override with SALTY_ADMIN_PASSWORD; applied at startup if set)
 salty.admin.password=${SALTY_ADMIN_PASSWORD:}
 
+# Remember-me (browser stay signed in) - token validity in seconds (default: 14 days)
+salty.remember-me.seconds=${SALTY_REMEMBER_ME_SECONDS:1209600}
+
 # JWT Configuration (override SALTY_JWT_SECRET and SALTY_JWT_EXPIRATION in production)
 salty.jwt.secret=${SALTY_JWT_SECRET:GTaRzK0pcRzoSHpKCz9XhfO1rbOtI8yXlqqU4yCnlsy}
 # Token expiration in milliseconds (default: 21 days)
